# Intent-Classification-System

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_output.txt  test_output2.txt  test_output3.txt
configs/: model_config.yaml  pipeline_config.yaml  training_config.yaml
data/: data_generator.py
deployment/: benchmark.py  convert_to_tflite.py  edge_inference.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb
src/audio/: __init__.py  audio_capture.py  feature_extraction.py  preprocessor.py
src/inference/: __init__.py  intent_classifier.py  pipeline.py  stt_engine.py  wake_word_detector.py
src/models/: __init__.py  intent_model.py  wake_word_model.py
src/training/: __init__.py  dataset.py  train_intent.py  train_wake_word.py
src/utils/: __init__.py  config_loader.py  logger.py  metrics.py
tests/: conftest.py  test_feature_extraction.py  test_intent_classifier.py  test_pipeline.py  test_wake_word_model.py
