[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "intent-classification-system"
version = "1.0.0"
description = "Edge-deployable wake word detection, STT, and intent classification pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["wake-word", "speech", "intent-classification", "edge-ai", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
